refactor: migrate to constructor injection and Java 17 Stream.toList()
- Replace field injection with constructor injection using Lombok @RequiredArgsConstructor
- Update mappers to use Stream.toList() instead of Collectors.toList() for Java 17
- Add comprehensive documentation for constructor injection and Stream.toList() usage
- Improve code quality, testability, and performance
- Follow Spring Framework and Java 17 best practices

Files changed:
- LearningSetMapper, ReviewHistoryMapper, RemindScheduleMapper, UserMapper
- CustomUserDetailsService (kept Collectors.toList() for type inference)
- Added CONSTRUCTOR_INJECTION_GUIDE.md, CONSTRUCTOR_INJECTION_SUMMARY.md, JAVA17_STREAM_TO_LIST_GUIDE.md